# nano_perplexity

./: .gitignore  README.md  balance.py  get_relevanc_demo.py  hello.py  json_repair_demo.py  nanoPerplexityAI.py  nanoPerplexityAI_reasoner.py  nanoPerplexityAI_reasoner_ollama.py  nanoPerplexityAI_reasoner_withFastAPI.py  nanoPerplexityAI_reasoner_withFastAPI_with_ranker.py  nanoPerplexityAI_reasoner_withFastAPI_with_tavily.py  nanoPerplexityAI_reasoner_withFastAPI_with_tavily_add_session.py  nanoPerplexityAI_reasoner_withNiceGUI.py  nicegui_temp.py  ollama_deepseek.py  playground.md  pydantic_with_json_repair_demo.py  pyproject.toml  rank.json  ranker_by_deepseek_v3.py  ranker_by_deepseek_v3_parse_by_pydantic.py  ranker_by_deepseek_v3_pure_string.py  ranker_by_deepseek_v3_pure_string_function.py  siliconflow_deepseek.py  tavily_demo.py  tavily_search_and_format.py  test_huoshan_deepseek_v3.py  test_search_api.py
sessions/: 2d22ce30-c843-4ec0-9725-687ab374e2a4.md  91db1937-08a4-45cc-8fdd-869ab523aa1c.md  98c9e927-7029-4b6d-ab38-dbe5ea8a4a63.md  ac36636a-8303-4be8-9cb8-1289273190d9.md  d3c731fe-aea6-4db2-bdae-eee6a9d7bb0a.md  dcca71fe-56db-4132-bb0a-3e56cf8899f7.md
static/: index.html  index_session.html
